# OS2sem

./: README.md
1/: CMakeLists.txt  Makefile  README.md  f1.in
1/src/: IsPipeEmpty.cpp  IsPipeEmpty.h  child.cpp  main.c  main.cpp
2/: CMakeLists.txt  README.md  main.cpp
2/include/: sort.hpp  threads.hpp
2/src/: sort.cpp  threads.cpp
3/: CMakeLists.txt  README.md
3/src/: child.cpp  main.cpp
4/: CMakeLists.txt  README.md  main1.cpp  main2.cpp
4/GCF/: GCF.cpp  GCF.hpp
4/Sort/: sort.cpp  sort.hpp
5_7/: README.md
5_7/src/: AbstractNode.hpp  CMakeLists.txt  ChildNodeInfo.hpp  Message.hpp  MessageBuilder.hpp  MessageData.hpp  MessageTypes.hpp  ServerNode.hpp  SpringBootApplication.hpp  ZmqUtils.hpp  main.cpp  server.cpp
cp/: CMakeLists.txt  GameManager.cpp  GameManager.hpp  README.md  client.cpp  conf.ini  dag.hpp  main.cpp  server.cpp  stat.cpp  utils.cpp  utils.hpp
cp/lib/: GameManager.cpp  statistics.txt  utils.cpp
cp/lib/inc/: GameManager.hpp  utils.hpp
